Fixes overflow issue, forces footer to the bottom of the page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,10 +6,17 @@
   overflow: hidden;
 }
 
-.content {
+.main {
   overflow-y: scroll;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  height: 100%;
+  padding-bottom: 120px;
 }
 
 #legal_recomendations:hover {
